# PPFDaaS

./: .cursorrules  .dockerignore  .gitignore  BENCHMARK_RESULTS.md  CMakeLists.txt  Dockerfile.client  Dockerfile.server  LICENSE  Makefile  PPFDaaS_REMEDIATION_PLAN.md  PROJECT_STATE.md  README.md  README.msd  cmake_output.txt  compose.prod.yaml  compose.yaml  ctest_output.txt  inference_pb2.py  inference_pb2_grpc.py  verify_output.txt
.cursor/rules/: bank-client-py.mdc  compiler-py.mdc  vendor-cpp.mdc
artifacts/: amortization_table.json  comparison_results.json  dispatch_result.json  errors.json  execution_matrix.json  precision_analysis.json  privacy_cost_analysis.json  rotation_strategy_comparison.json  throughput_results.json  wire_sizes.json
bank_client/: CMakeLists.txt  bank_client.py
bank_client/backend/: feature_pipeline_degree2.py
bank_client/he_wrapper/: seal_wrapper.cpp  seal_wrapper_160.cpp
bank_client/tools/: generate_seal_keys.cpp
compiler/: auc_dispatch.py  degree2_linearizer.py  gen_keys_160.py  linearize.py  serialize_degree2_weights.py  serialize_weights.py  train_logistic_regression.py  train_xgboost.py
data/: README.md
docs/: PPFDaaS_Audit_and_Defense_Guide.docx  PPFDaaS_Eng_Spec_v1.1.docx  PPFDaaS_Master_Implementation_Guide.docx  code_and_data_flow.md  spec.md
logs/: dispatch_output.txt  linearize_output.txt  train_output.txt
proto/: inference.proto
scripts/: benchmark_multirun.py  benchmark_multirun.sh  build_execution_matrix.py  demo_e2e.py  fetch_creditcard_dataset.sh  generate_ablation.py  generate_amortization_table.py  generate_dev_certs.sh  generate_research_artifacts.py  generate_roc.py  measure_wire_size.py  parity_gate.py  precision_analysis.py  privacy_cost_analysis.py  reproduce_all.py  rotation_strategy_comparison.py  setup_results_dir.py  show_accuracy_check.py  verify_env.sh
tests/: CMakeLists.txt  benchmark_comparison.py  benchmark_throughput.py  numeric_oracle.py  test_concurrent_inference.py  test_inference.py  verify_all.py
tools/local_benchmark/: ckks_context_160.cpp  ckks_context_160.h  precision_probe.cpp
tools/openfhe_benchmark/: CMakeLists.txt  README.md  openfhe_benchmark.cpp  openfhe_linear_eval.cpp  openfhe_linear_eval.h
vendor_server/: CMakeLists.txt
vendor_server/include/: ckks_context.h  ckks_context_160.h  ckks_context_depth2.h  eval_context_160.h  he_inference.h  inference_service.h  inference_service_160.h  provisioning_state.h  rotation_hoisting.h  rotation_hoisting_degree2.h  weight_loader.h  weight_loader_degree2.h
vendor_server/src/: benchmark.cpp  benchmark_160.cpp  ckks_context.cpp  ckks_context_160.cpp  ckks_context_depth2.cpp  eval_context_160.cpp  he_inference.cpp  inference_service.cpp  inference_service_160.cpp  rotation_hoisting.cpp  rotation_hoisting_degree2.cpp  server_main.cpp  smoke_test.cpp  vendor_server_160.cpp  weight_loader.cpp  weight_loader_degree2.cpp  wire_size_probe.cpp
vendor_server/tests/: test_he_core.cpp
